MDEV-13711 assertion on CREATE LIKE fix

Locks are released at mysql_execute_command() end.